# tradingview-mcp

./: CLAUDE.md  README.md  pyproject.toml  test_bitget.py
src/tradingview_mcp/: login.py  server.py
src/tradingview_mcp/core/services/: __init__.py  auth.py  screener_provider.py  support_resistance.py  watchlist.py
src/tradingview_mcp/core/utils/: validators.py
