[project]
name = "tradingview-mcp"
version = "0.1.0"
description = "Model Context Protocol server exposing crypto screener tools (TradingView Screener)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1.12.0",
  "tradingview-screener>=0.6.4",
  "tradingview-ta>=3.3.0",
  "requests>=2.28.0",
]

[project.optional-dependencies]
# Browser login helper (optional)
login = ["playwright>=1.40.0"]

[project.scripts]
# Entry point now points to packaged module
tradingview-mcp = "tradingview_mcp.server:main"
# Login helper command
tradingview-login = "tradingview_mcp.login:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tradingview_mcp = ["coinlist/*.txt"]

[tool.uv]
dev-dependencies = []
package = true

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
